--- a/Uzd05/5uzd_Rubene.Rmd
+++ b/Uzd05/5uzd_Rubene.Rmd
@@ -2,7 +2,8 @@
 title: "5uzd_Rubene"
 author: "Betija Rubene"
 date: "2025-01-27"
-output: rmarkdown::github_document
+output:  rmarkdown::github_document
+always_allow_html: true
 ---
 
 ```{r setup, include=FALSE}
@@ -25,18 +26,18 @@ library(stringr)
 
 # Sagatavošanās
 
-Ielasu karti, no kuras jāizvēlas četras blakus esošas karšu lapas, kā arī meža datus un references rastrus
+Ielasu karti, no kuras jāizvēlas četras blakus esošas karšu lapas un meža datus
 
 ```{r}
 karte <- st_read_parquet("../ref_vektori/tks93_50km.parquet")
 mezi <- st_read_parquet("../centra_mezi/centra_mezi_labots.parquet")
 ```
 
-Tā kā vēlāk šajā uzdevumā būs interesējoši skatīties uz lietām, kas notiek gar malām, būtu vērtīgi iemācīties izmantot pakotni leaflet. To arī varu izmantot lapu izvēlei.
+Tā kā vēlāk šajā uzdevumā būs interesējoši skatīties uz lietām, kas notiek gar malām, būtu vērtīgi iemācīties izmantot pakotni leaflet. To arī varu izmantot lapu izvēlei. Vienīgi šīs kartes nav iespējams ievietot github dokumentā.
 
 Nav svarīgi, kā izvēlēties lapas - paņemšu lapas kaut kur pa vidu, jo strādājam ar centra virsmežniecības datiem
 
-```{r, cache = TRUE}
+```{r, message = FALSE, cache = TRUE}
 crs(karte)
 kartelatlon <- st_transform(karte, crs = 4326) # leaflet pieprasa WGS84
 
@@ -71,7 +72,7 @@ lapas_list_paths <- list.files(pattern = "^lapa\\d{4}\\.parquet$", full.names = 
 rm(data, karte, kartelatlon, file_name, nr)
 ```
 
-Iepriekšējā uzdevumā izveidotā funkcija, kurā bija nepieciešams veikt dažas izmaiņas. Ja pareizi esmu sapratusi uzdevuma būtību, tad references rastrus vajadzīgs apgriezt nevis ar lapu, bet ar atlasīto meža datu extent (crop to tā dara pēc nokusējuma) Tāds domu gājiens, jo uzdevuma premisē bija runa par rastru pārklāšanos - ja rastru apgriezīšu uzreiz ar pašu lapu, tad var tikt daļēji pazaudēta informācija par uz lapas robežām esošajiem poligoniem, ja tādi būs radušies. Tas nozīmē, ka būs nepieciešams saglabāt arī izveidotos meža vektorfailus katrā uzdevumā
+Iepriekšējā uzdevumā izveidotajā funkcijā bija nepieciešams veikt dažas izmaiņas. Ja pareizi esmu sapratusi uzdevuma būtību, tad references rastrus vajadzīgs apgriezt nevis ar lapu, bet ar atlasīto meža datu extent (crop to tā dara pēc nokusējuma) Tāds domu gājiens, jo uzdevuma premisē bija runa par rastru pārklāšanos - ja rastru apgriezīšu uzreiz ar pašu lapu, tad var tikt daļēji pazaudēta informācija par uz lapas robežām esošajiem poligoniem, ja tādi būs. Tas nozīmē, ka būs nepieciešams saglabāt arī izveidotos meža vektorfailus katrā uzdevumā.
 
 ```{r, warning = FALSE}
 dir.create("5uzd_faili") # mape visiem failiem lai mazinātu haosu
@@ -102,7 +103,7 @@ priezu_mezi_100m <-
 
 Izmantoju spatial join.
 
-```{r, message = FALSE}
+```{r, message = FALSE, error = FALSE}
 for (i in lapas_list_paths) {
   lapa <- st_read_parquet(i)
   mezi <-st_read_parquet("../centra_mezi/centra_mezi_labots.parquet")
@@ -118,7 +119,7 @@ parbaude <- st_read_parquet("5uzd_faili/lapa3331mezi_1uzd.parquet")
 plot(st_geometry(parbaude))
 rm(parbaude,basename,i,nosaukums, fails, lapa, lapas)
 
-# saglabāto failu saraksts ko vēlāk pielietot ciklā
+# saglabāto failu saraksts, ko vēlāk pielietot ciklā
 uzd1_mezi_file_paths <- list.files("5uzd_faili", pattern = "^lapa\\d{4}mezi_1uzd\\.parquet$", full.names = TRUE)
 
 # cik objektu katrā lapā?
@@ -145,7 +146,7 @@ leaflet() %>%
   addPolygons(data = lapa3331uzd1, color = "green") 
 ```
 
-Kartes lapai piederīgie objekti, kā jau bija sagaidāms no funkcijas st_join, ir visi, kuri kaut vai daļēji ietilpst kartes lapā. Tātad iekļauti arī tie objekti, kas atrodas uz lapas malām
+Kartes lapai piederīgie objekti, kā jau bija sagaidāms no funkcijas st_join, ir visi, kuri kaut vai daļēji ietilpst kartes lapā. Tātad iekļauti arī tie objekti, kas atrodas uz lapas malām.
 
 ```{r}
 rm(lapa3331uzd1, uzd1_mezi)
@@ -161,7 +162,7 @@ for (i in seq_along(uzd1_mezi_file_paths)) {
 }
 
 rezultats <- rast("5uzd_faili/lapa3331_1uzd_priedes100m.tif")
-plot(rezultats) # Ir ok
+plot(rezultats) # Ir ok, tikai var redzēt, ka gar malām informācija ir pazudusi (gar malām tikai zemas vērtības)
 rm(rezultats, i)
 ```
 
@@ -172,11 +173,9 @@ Sākumā gribu paskatīties, kā izskatās divas no lapām, jo sagaidāma pārkl
 ```{r}
 # pirmais rastrs
 lapa3331_priedes_1uzd <- rast("5uzd_faili/lapa3331_1uzd_priedes100m.tif")
-lapa3331_priedes_1uzd <- project(lapa3331_priedes_1uzd, st_crs(lapa3331)$wkt)
 
 #otrais rastrs
 lapa3332_priedes_1uzd <- rast("5uzd_faili/lapa3332_1uzd_priedes100m.tif")
-lapa3332_priedes_1uzd <- project(lapa3332_priedes_1uzd, st_crs(lapa3331)$wkt)
 
 leaflet() %>%
   addTiles() %>%
@@ -189,25 +188,27 @@ leaflet() %>%
     options = layersControlOptions(collapsed = FALSE))
 ```
 
-Rastriem ir dažādi malu platumi. Bet redzams, ka rastrs ir arī ārpus lapas, kas bija sagaidāms, kā arī tas, ka vietās, kur rastri pārklājas, abos rastros vērtības nesakrīt. Pie malām vērtības vienmēr ir mazas, jo poligoni, kas ir bijuši tieši ārpus atlasītajiem mežiem, nav ņemti vērā (tie šīs malu vērtības teorētiski daļā gadījumu varēja ietekmēt, kā redzams vietās, kur malas pārklājas).
+Rastru malām aiz lapu robežām ir dažādi platumi. Bet redzams, ka rastrs ir arī ārpus lapas, kas bija sagaidāms, kā arī tas, ka vietās, kur rastri pārklājas, abos rastros vērtības nesakrīt. Pie malām vērtības vienmēr ir mazas, jo poligoni, kas ir bijuši tieši ārpus atlasītajiem mežiem, nav ņemti vērā (šīs malu vērtības teorētiski daļā gadījumu varēja ietekmēt, kā redzams vietās, kur malas pārklājas).
 
-Vai tiem dažādajiem malu platumiem ir saistība ar ar to, ka mētājos pa dažādām koordinātu sistēmām, jo leaflet karte pieprasa WGS84 (esmu par to iepriekš domājusi, cik daudz un kādas kļūdas var rasties, transformējot crs, labprāt to apmācību laikā apspriestu)? Vai tas vienkārši ir rastra šūnu izvietojuma dēļ vai uz lapas malām esošo poligonu dēļ? 
+Platās malas laikam ir tādēļ, jo tika atlasīti arī poligoni ārpus lapas, attiecīgi tad rastrs arī tika izgriezts tikpat tālu.  Leaflet karte pieprasa WGS84 - cik daudz un kādas kļūdas var rasties, transformējot crs? Labprāt to apmācību laikā apspriestu. Negribēju visu laiku darboties WGS84 koordinātu sistēmā, jo premisē minēts, ka projektā pastāvīgi strādāsim ar LKS-92.
 
-Negribēju visu laiku darboties WGS84 koordinātu sistēmā, jo premisē minēts, ka projektā pastāvīgi strādāsim ar LKS-92.
-
-
-Izveidoju sarakstu ar ceļiem uz visiem radītajiem failiem
+Izveidoju sarakstu ar ceļiem uz visiem radītajiem failiem:
 
 ```{r}
 uzd1_priedes_file_paths <- list.files("5uzd_faili", pattern = "^lapa\\d{4}_1uzd_priedes100m\\.tif$", full.names = TRUE)
 uzd1_priedes <- lapply(uzd1_priedes_file_paths, rast)
 ```
 
-Tagad rastri jāapvieno. Jādomā par to, ko darīt ar malām, kuras pārklājas. Negribu, lai viena rastra vērtības ir svarīgākas par otrām, ko dara funkcija merge, jo, kā redzams augstāk kartē, rastri krietni iestiepjas arī blakus lapā. Tāpēc izmantošu terra:mosaic ar fun = max, lai ņemtu vērā maksimālo vērtību no pārklāšanās vietām (centīšos paskaidrot domu, bet kaut kā nesanāk veikli - ja jau vienā lapā mežu īpatsvars tika aprēķināts, tad tas noteikti ir vismaz tik liels konkrētajā šūnā, kas ir precīzākais, ko šobrīd varu iegūt)
+Tagad rastri jāapvieno. Jādomā par to, ko darīt ar malām, kuras pārklājas. Negribu, lai viena rastra vērtības ir svarīgākas par otrām, ko dara funkcija merge, jo, kā redzams augstāk kartē, rastri krietni iestiepjas arī blakus lapā. Tāpēc izmantošu terra:mosaic ar fun = max, lai ņemtu vērā maksimālo vērtību no pārklāšanās vietām (centīšos paskaidrot domu, bet kaut kā nesanāk veikli - ja jau vienā lapā mežu īpatsvars tika aprēķināts, tad tas noteikti ir vismaz tik liels konkrētajā šūnā, kas ir precīzākais, ko šobrīd varu iegūt).
 
 ```{r}
-uzd1_priedes_merged <- do.call(mosaic, uzd1_priedes)
+uzd1_priedes_merged <- do.call(mosaic, c(uzd1_priedes, fun = max))
 plot(uzd1_priedes_merged)
+```
+
+Acīmredzot tajā platājā malā bijuši meža dati, kuri izfiltrēti, atlasot tikai priežu mežus.
+
+```{r}
 writeRaster(uzd1_priedes_merged, "Uzd1_priedes100m_merged.tif", overwrite = TRUE)
 ```
 
@@ -223,8 +224,6 @@ leaflet() %>%
     overlayGroups = "lapas",
     options = layersControlOptions(collapsed = FALSE))
 ```
-
-Neesmu droša, kas notiek ar augšējo kreiso lapu... varbūt tur ir bijuši kādi plaši poligoni ārpus kartes lapas?
 
 Bet tā kopumā pēc savienošanas karšu lapu robežas izteikti nav redzamas, lai gan dažviet ir mazākas vērtības vietās, kur savstarpēji robežojas lapu malas. Man šķiet, ka strādājot būtu vērtīgi ieviest buferi, lai malās nekas nepazustu - jo šobrīd  poligoni, kas ir bijuši tieši ārpus atlasītajiem mežiem, nav ņemti vērā, līdz ar to pie pašas malas kaut kāda informācija var būt zaudēta.
 
@@ -250,6 +249,9 @@ for (i in seq_along(uzd1_mezi_file_paths)) {
 }
 
 # 1.3. solis
+uzd1_priedes_file_paths <- list.files("5uzd_faili", pattern = "^lapa\\d{4}_1uzd_priedes100m\\.tif$", full.names = TRUE)
+uzd1_priedes <- lapply(uzd1_priedes_file_paths, rast)
+
 uzd1_priedes_merged <- do.call(mosaic, uzd1_priedes)
 writeRaster(uzd1_priedes_merged, "Uzd1_priedes100m_merged.tif", overwrite = TRUE)
 
@@ -257,7 +259,7 @@ BeigasUzd1 <- Sys.time()
 print(BeigasUzd1 - SakumsUzd1)
 ```
 
-Process aizņema aptuveni 30 sekundes.
+Process aizņema aptuveni minūti.
 
 ```{r}
 rm(fails,lapa,lapa3331_priedes_1uzd, lapa3332_priedes_1uzd, uzd1_priedes, BeigasUzd1, SakumsUzd1, uzd1_mezi_file_paths, uzd1_priedes_file_paths)
@@ -269,7 +271,7 @@ rm(fails,lapa,lapa3331_priedes_1uzd, lapa3332_priedes_1uzd, uzd1_priedes, Beigas
 
 2.1. solis: sāciet iteratīvo ciklu, kurā, izmantojot clipping iegūstiet MVR datus ar apstrādājamo kartes lapu (šis ir sākums laika mērogošanai). Kāds ir objektu skaits katrā kartes lapā, kā tas saistās ar iepriekšējo apakšuzdevumu? Ārpus cikla apskatiet katrai kartes lapai piederīgos objektus - vai tie atrodas tikai kartes lapas iekšienē, vai ir iekļauti visi objekti, kas ir uz kartes lapas robežām?
 
-Tagad tas pats, kas iepriekš, jāatkārto ar clipping, izmantojot funkciju st_intersects. Šī funkcija atgriež tikai tādas ģeometrijas, kurās x un y objekti savstarpēji pārklājas, līdz ar to sagaidāms, ka ģeometrijas tiks apgrieztas līdz ar lapas malām.
+Tagad tas pats, kas iepriekš, jāatkārto ar clipping, izmantojot funkciju st_intersection. Šī funkcija atgriež tikai tādas ģeometrijas, kurās x un y objekti savstarpēji pārklājas, līdz ar to sagaidāms, ka ģeometrijas tiks apgrieztas līdz ar lapas malām.
 
 ```{r, warning = FALSE}
 for (i in lapas_list_paths) {
@@ -290,7 +292,7 @@ uzd2_mezi <- map(uzd2_mezi_file_paths, st_read_parquet)
 
 Katrā lapā piederīgi ir 15729, 29042, 33449 un 32904 objekti - tieši tāpat, kā ar funkciju st_join. Tas bija sagaidāms, jo, pat ja funkcija apgriež daļu objektu, to skaits paliek nemainīgs.
 
-Paskatīšos, kas notiek gar lapas malām
+Paskatīšos, kas notiek gar lapas malām:
 
 ```{r}
 lapa3331uzd2 <- st_read_parquet("5uzd_faili/lapa3331mezi_2uzd.parquet")
@@ -375,7 +377,7 @@ Laika mērīšanai:
 ```{r, warning = FALSE, message = FALSE}
 SakumsUzd2 <- Sys.time()
 
-# 1.1. solis
+# 2.1. solis
 for (i in lapas_list_paths) {
   lapa <- st_read_parquet(i)
   mezi <-st_read_parquet("../centra_mezi/centra_mezi_labots.parquet")
@@ -386,12 +388,15 @@ for (i in lapas_list_paths) {
   st_write_parquet(fails, nosaukums)
 }
 
-# 1.2. solis
+# 2.2. solis
 for (i in seq_along(uzd2_mezi_file_paths)) {
   mana_funkcija(mezs_dati = uzd2_mezi_file_paths[i], koku_suga = 1, uzd_nr = "2uzd")
 }
 
-# 1.3. solis
+# 2.3. solis
+uzd2_priedes_file_paths <- list.files("5uzd_faili", pattern = "^lapa\\d{4}_2uzd_priedes100m\\.tif$", full.names = TRUE)
+uzd2_priedes <- lapply(uzd2_priedes_file_paths, rast)
+
 uzd2_priedes_merged <- do.call(mosaic, uzd2_priedes)
 writeRaster(uzd2_priedes_merged, "Uzd2_priedes100m_merged.tif", overwrite = TRUE)
 
@@ -475,11 +480,11 @@ leaflet() %>%
     overlayGroups = c("rastrs3331","rastrs3332","lapas"),
     options = layersControlOptions(collapsed = FALSE))
 ```
-Man bija aizdomas, ka kādā no malām poligoni neaizsniegsies līdz pašām lapas malām, attiecīgi radot pārrāvumus starp atsevišķiem rastriem tomēr izskatās, ka tas tā nav noticis
+Man bija aizdomas, ka kādā no malām poligoni neaizsniegsies līdz pašām lapas malām, attiecīgi radot pārrāvumus starp atsevišķiem rastriem, tomēr izskatās, ka tas tā nav noticis. Tomēr saredzu šajā problēmu, ka ne vienmēr var tā paveikties.
 
 3.3. solis: apvienojiet iteratīvajā ciklā radītos GeoTIFF failus vienā slānī, kura nosaukums ir saistāms ar apakšuzdevumu (laika mērogošanas beigas). Vai apvienotajā slānī ir redzamas karšu lapu robežas? Kā vērtības sakrīt ar citiem apakšuzdevumiem?
 
-Apvienoju failus vienā slānī ar merge
+Apvienoju failus vienā slānī ar merge:
 
 ```{r}
 uzd3_priedes_file_paths <- list.files("5uzd_faili", pattern = "^lapa\\d{4}_3uzd_priedes100m\\.tif$", full.names = TRUE)
@@ -489,7 +494,7 @@ uzd3_priedes_merged <- do.call(merge, uzd3_priedes)
 writeRaster(uzd3_priedes_merged, "Uzd3_priedes100m_merged.tif", overwrite = TRUE)
 ```
 
-Skatos, kas sanācis
+Skatos, kas sanācis:
 
 ```{r}
 leaflet() %>%
@@ -503,14 +508,14 @@ leaflet() %>%
     overlayGroups = "lapas",
     options = layersControlOptions(collapsed = FALSE))
 ```
-Pārrāvumu nav, tomēr redzams, ka tieši zem lapu robežām vērtības ir zemākas - tas tāpēc, ka nav iekļauti uz robežām vai tuvu tām ārpusē esošie poligoni, kas tad attiecīgi nav pierēķināti priežu mežu īpatsvaram un rada kļūdas datos.
+Pārrāvumu nav, tomēr redzams, ka tieši uz lapu robežām vērtības ir zemākas - tas tāpēc, ka nav iekļauti uz robežām vai tuvu tām ārpusē esošie poligoni, kas tad attiecīgi nav pierēķināti priežu mežu īpatsvaram un rada kļūdas rastrā.
 
 Laika mērīšanai:
 
 ```{r, message = FALSE, warning = FALSE}
 SakumsUzd3 <- Sys.time()
 
-# 1.1. solis
+# 3.1. solis
 for (i in lapas_list_paths) {
   lapa <- st_read_parquet(i)
   mezi <-st_read_parquet("../centra_mezi/centra_mezi_labots.parquet")
@@ -521,12 +526,15 @@ for (i in lapas_list_paths) {
   st_write_parquet(fails, nosaukums)
 }
 
-# 1.2. solis
+# 3.2. solis
 for (i in seq_along(uzd3_mezi_file_paths)) {
   mana_funkcija(mezs_dati = uzd3_mezi_file_paths[i], koku_suga = 1, uzd_nr = "3uzd")
 }
 
-# 1.3. solis
+# 3.3. solis
+uzd3_priedes_file_paths <- list.files("5uzd_faili", pattern = "^lapa\\d{4}_3uzd_priedes100m\\.tif$", full.names = TRUE)
+uzd3_priedes <- lapply(uzd3_priedes_file_paths, rast)
+
 uzd3_priedes_merged <- do.call(mosaic, uzd3_priedes)
 writeRaster(uzd3_priedes_merged, "Uzd2_priedes100m_merged.tif", overwrite = TRUE)
 
@@ -553,12 +561,12 @@ Tā kā beigu rezultāts tāpat ir kopīgs rastrs, apvienošu visas četras lapa
 lapas <- bind_rows(lapas_list)
 ```
 
-Izmantošu pieeju ar st_join, jo pagaidām tā šķita precīzākā. Te uzreiz varu mērīt laiku, jo pa vidu neko neapskatīšu - funkciju darbība ir skaidra. Vēr'tibas salīdzināšu pašās beigās visiem sešiem apakšuzdevumiem kopā.
+Izmantošu pieeju ar st_intersection, jo pagaidām tā šķita precīzākā. Te uzreiz varu mērīt laiku, jo pa vidu neko neapskatīšu - funkciju darbība ir skaidra. Vērtības salīdzināšu pašās beigās visiem apakšuzdevumiem kopā.
 
 ```{r, warning = FALSE, message = FALSE}
 SakumsUzd4 <- Sys.time()
 
-uzd4_mezi <- st_join(mezi, lapas, left = FALSE)
+uzd4_mezi <- st_intersection(mezi, lapas)
 st_write_parquet(uzd4_mezi, "5uzd_faili/mezi_4uzd.parquet")
 
 # modificētā funkcija šim uzdevumam
@@ -597,7 +605,7 @@ rm(uzd4_mezi, BeigasUzd4, SakumsUzd4, mana_funkcija_4uzd)
 
 Pieļauju, ka ar "visu MVR informāciju" domāta tikai centra virsmežniecība?
 
-Ieviešu un pielietoju funkciju (šoreiz jānomaina bija tikai izvades rastra filename:
+Ieviešu un pielietoju funkciju:
 
 ```{r, message = FALSE}
 SakumsUzd5 <- Sys.time()
@@ -612,31 +620,73 @@ priezu_mezi <- mezs_dati %>% filter(s10 == koku_suga)
 priezu_mezi_10m <- rasterize(priezu_mezi,ref10m, background = 0)
 priezu_mezi_10m[is.na(ref10m)] <- NA
 priezu_mezi_100m <-
-  terra::resample(priezu_mezi_10m,ref100m,method="average",
+  terra::resample(priezu_mezi_10m,ref100m,method="average", 
                   filename = "5uzd_priedes100m.tif", overwrite=TRUE)
+uzd5_priedes <- crop(rast("5uzd_priedes100m.tif"), lapas,)
+writeRaster(uzd5_priedes,"5uzd_priedes100m.tif", overwrite = TRUE)
 }
 
 mana_funkcija_5uzd(mezs_dati = "../centra_mezi/centra_mezi_labots.parquet", koku_suga = 1)
-uzd5_priedes <- crop(rast("5uzd_priedes100m.tif"), mezi)
 
 BeigasUzd5 <- Sys.time()
 print(BeigasUzd5 - SakumsUzd5)
 ```
 
-Process aizņēma aptuveni pusotru minūti
+Process aizņēma aptuveni 2 minūtes
 
 ```{r}
 rm(basename, BeigasUzd5 ,i ,nosaukums, SakumsUzd5)
 ```
 
-xxxxx vēl jāsalīdzina rezultāti!!
+Tā kā iepriekš nesalīdzināju iegūtos rezultātus, darīšu to tagad:
+
+```{r}
+# ielasu failus
+uzd1_priedes_merged <- rast("Uzd1_priedes100m_merged.tif")
+uzd2_priedes_merged <- rast("Uzd2_priedes100m_merged.tif")
+uzd3_priedes_merged <- rast("Uzd3_priedes100m_merged.tif")
+uzd4_priedes <- rast("4uzd_priedes100m.tif")
+uzd5_priedes <- rast("5uzd_priedes100m.tif")
+
+leaflet() %>%
+  addTiles() %>%
+  addRasterImage(uzd1_priedes_merged, group = "1. uzd - st_join") %>%
+  addRasterImage(uzd2_priedes_merged, group = "2. uzd - st_intersection") %>%
+  addRasterImage(uzd3_priedes_merged, group = "3. uzd - st_filter(.predicate = st_within)") %>%
+  addRasterImage(uzd4_priedes, group = "4. uzd - bez iterācijām") %>%
+  addRasterImage(uzd5_priedes, group = "5. uzd - izgriežot") %>%
+  addPolygons(data = lapa3331, color = "blue", group = "lapas") %>%
+  addPolygons(data = lapa3332, color = "blue", group = "lapas") %>%
+  addPolygons(data = lapa3333, color = "blue", group = "lapas") %>%
+  addPolygons(data = lapa3334, color = "blue", group = "lapas") %>%
+  addLayersControl(
+    overlayGroups = c("lapas","1. uzd - st_join", "2. uzd - st_intersection", "3. uzd - st_filter(.predicate = st_within)", "4. uzd - bez iterācijām", "5. uzd - izgriežot"),
+    options = layersControlOptions(collapsed = FALSE))
+```
+
+No rastriem visprecīzākā informācija sagaidāma no 5. uzdevuma - tur teorētiski nevar rasties problēmas rastra malās, tāpēc to varētu uzskatīt par precīzāko reālās situācijas atspoguļojumu un primāri ar to salīdzināšu visu pārējo. 4. uzdevuma rezultāts sagaidāms tāds pats vismaz lapu savienojuma vietās, jo aprēķins veikts visai teritorijai reizē. Pārējos rastros visticamāk sagaidāmas vismaz kaut kādas problēmas, līmējot tos kopā.
+
+Skatos, ka rezultāti 2., 4. un 5. uzdevumā ir identiski, tātad st_intersection šajā gadījumā ir bijusi efektīva pieeja ar precīzām malu vērtībām.
+
+Robežlīnijas salīmētajos rastros ir redzamas 1. un 3. uzdevuma rastriem - pie robežam vērtības ir zemākas, jo tur tiek zaudēta informācija par malām. Bet, ja pareizi saprotu, kā notiek šis process, tad tas, cik daudz informācijas gar malām tiek pazaudēts, ir atkarīgs no tā, cik tālu 100m rastrā iestiepjas 10m rastra šūnas (ja tukšas, tad pārrēķinā laikam tiek uztvertas kā šūna ar vērtību 0, jo šūnas gar malām savu izmēru nav mainījušas). Man netapa skaidrs, kāpēc ar šo ir problēmas 1. apakšuzdevumā - tika taču saglabāti visi poligoni arī ārpus lapas. Teorētiski, tā kā bija pārklāšanās, pēc salīmēšanas (ņemot vērā maksimālās vērtības, nevis vidējo vai ko citu) nevajadzēja būt problēmām?
+
+Kartes lapām droši vien ir "apaļi" malu izmēri, kuros references rastri smuki ietilpst, tāpēc, precīzi apgriežot mežu datus ar st_intersects, info gar malām netiek zaudēts. To apliecina arī tas, ka 2. un 4. uzdevuma vektors ir rezultējies identiskā rastrā kā 5. - tomēr pretēji intuīcijai 2. uzdevums aizņēma mazliet vairāk laika (laiks gan mēdza krietni variēt starp izpildes reizēm, tāpēc to grūti salīdzināt). Tātad ilgāk ir iterēt pa kartas lapām, nekā visu vajadzīgo veikt visai teritorijai uzreiz?
+
+Ņemot vērā iepriekšminēto, efektīvākā versija šķita 4. uzdevuma versija - tas bija atrāk un komandrindas bija īsākas un vienkāršākas, nekas nebija jālīmē kopā. Ņemot vērā premisi un aprakstus tajā par efektīvu telpas dalīšanu, mani mulsina, ka telpas dalīšana aizņēma vairāk laika. Tomēr strādāju ar salīdzinoši mazu telpu - nezinu, cik ilgs būtu šis process lielākā telpā.
+
+Šajā gadījumā nebija būtiski pievērst uzmanību atribūtiem datu tabulās, jo jāpielieto bija tikai viena kolonna no MVR datiem (1. stāva 1. suga) tāpēc es tiem īpaši nepievērsu uzmanību, bet citos gadījumos tas varētu būt svarīgi.
+
+Domājot par citiem EGV šajā projektā - ir jāapreķina, piemēram, attālumi no konkrētiem objektiem. Tādos gadījumos būtu vēl svarīgāk apdomāt, kā nodrošināt pareizus datus gar telpas malām, ja tās tiek līmētas kopā.
+
 
 
 # 6) Jaudīgiem datoriem un dažādu pieeju izmēģināšanai
 
 Saistiet atbilstošo mežaudžu informāciju ar 100 m tīklu no projekta repozitorija un izveidojiet projekta repozitorijā esošajam 100 m rastra tīklam atbilstošu rastru pēc šūnu novietojuma un vērtībām. Kad iegūstat salīdzināmu rezultātu, mērogojiet tā izpildei nepieciešamo laiku. Kā vērtības sakrīt ar citiem apakšuzdevumiem?
 
-Mans dators nav jaudīgs, tomēr tāpat vismaz pamēģināšu?
+Mans dators nav jaudīgs :') un šis izklausās pēc ārkārtīgi ilga un smaga procesa, un es nesaredzu, kā šī pieeja varētu radīt ievērojami labāku rezultātu.
+
+Ņemot vērā visu iepriekšminēto, atļaujos šo uzdevumu neveikt, lai virzītos tālāk apmācībās.
 
 
 
